packages/qql/src/generated/src/QQLParser.ts
// Generated from src/QQL.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { QQLVisitor } from "./QQLVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class QQLParser extends antlr.Parser {
    public static readonly TABLE = 1;
    public static readonly STATS = 2;
    public static readonly WHERE = 3;
    public static readonly SORT = 4;
    public static readonly EVAL = 5;
    public static readonly REGEX = 6;
    public static readonly TIMECHART = 7;
    public static readonly UNPACK = 8;
    public static readonly AS = 9;
    public static readonly BY = 10;
    public static readonly SPAN = 11;
    public static readonly TIMECOL = 12;
    public static readonly MAXGROUPS = 13;
    public static readonly FIELD = 14;
    public static readonly ASC = 15;
    public static readonly DESC = 16;
    public static readonly IN = 17;
    public static readonly TRUE = 18;
    public static readonly FALSE = 19;
    public static readonly IF = 20;
    public static readonly CASE = 21;
    public static readonly ELSE = 22;
    public static readonly SEARCH_AND = 23;
    public static readonly SEARCH_OR = 24;
    public static readonly PIPE = 25;
    public static readonly COMMA = 26;
    public static readonly LPAREN = 27;
    public static readonly RPAREN = 28;
    public static readonly LBRACKET = 29;
    public static readonly RBRACKET = 30;
    public static readonly EQUAL = 31;
    public static readonly EQUAL_EQUAL = 32;
    public static readonly NOT_EQUAL = 33;
    public static readonly GREATER_EQUAL = 34;
    public static readonly LESS_EQUAL = 35;
    public static readonly GREATER_THAN = 36;
    public static readonly LESS_THAN = 37;
    public static readonly AND = 38;
    public static readonly OR = 39;
    public static readonly NOT = 40;
    public static readonly PLUS = 41;
    public static readonly MINUS = 42;
    public static readonly MULTIPLY = 43;
    public static readonly DIVIDE = 44;
    public static readonly SEARCH_PARAM_NEQ = 45;
    public static readonly AT_DATASOURCE = 46;
    public static readonly DQUOT_STRING = 47;
    public static readonly SQUOT_STRING = 48;
    public static readonly REGEX_PATTERN = 49;
    public static readonly INTEGER = 50;
    public static readonly IDENTIFIER = 51;
    public static readonly WS = 52;
    public static readonly COMMENT = 53;
    public static readonly RULE_query = 0;
    public static readonly RULE_datasource = 1;
    public static readonly RULE_controllerParam = 2;
    public static readonly RULE_search = 3;
    public static readonly RULE_searchTail = 4;
    public static readonly RULE_searchTerm = 5;
    public static readonly RULE_searchFactor = 6;
    public static readonly RULE_searchLiteral = 7;
    public static readonly RULE_pipelineCommand = 8;
    public static readonly RULE_tableCmd = 9;
    public static readonly RULE_tableColumn = 10;
    public static readonly RULE_statsCmd = 11;
    public static readonly RULE_aggregationFunction = 12;
    public static readonly RULE_groupby = 13;
    public static readonly RULE_whereCmd = 14;
    public static readonly RULE_sortCmd = 15;
    public static readonly RULE_sortColumn = 16;
    public static readonly RULE_evalCmd = 17;
    public static readonly RULE_evalExpression = 18;
    public static readonly RULE_regexCmd = 19;
    public static readonly RULE_timechartCmd = 20;
    public static readonly RULE_timechartParams = 21;
    public static readonly RULE_unpackCmd = 22;
    public static readonly RULE_logicalExpression = 23;
    public static readonly RULE_logicalTail = 24;
    public static readonly RULE_unitExpression = 25;
    public static readonly RULE_notExpression = 26;
    public static readonly RULE_inArrayExpression = 27;
    public static readonly RULE_comparisonExpression = 28;
    public static readonly RULE_functionExpression = 29;
    public static readonly RULE_functionArgs = 30;
    public static readonly RULE_functionArg = 31;
    public static readonly RULE_evalFunctionArg = 32;
    public static readonly RULE_evalFunction = 33;
    public static readonly RULE_caseThen = 34;
    public static readonly RULE_calcExpression = 35;
    public static readonly RULE_calcAction = 36;
    public static readonly RULE_calcTerm = 37;
    public static readonly RULE_calcTermAction = 38;
    public static readonly RULE_calculateUnit = 39;
    public static readonly RULE_factor = 40;
    public static readonly RULE_literalBoolean = 41;
    public static readonly RULE_literalString = 42;
    public static readonly RULE_regexLiteral = 43;
    public static readonly RULE_identifierOrString = 44;

    public static readonly literalNames = [
        null, "'table'", "'stats'", "'where'", "'sort'", "'eval'", "'regex'", 
        "'timechart'", "'unpack'", "'as'", "'by'", "'span'", "'timeCol'", 
        "'maxGroups'", "'field'", "'asc'", "'desc'", "'in'", "'true'", "'false'", 
        "'if'", "'case'", "'else'", "'AND'", "'OR'", "'|'", "','", "'('", 
        "')'", "'['", "']'", "'='", "'=='", null, "'>='", "'<='", "'>'", 
        "'<'", "'&&'", "'||'", "'!'", "'+'", "'-'", "'*'", "'/'"
    ];

    public static readonly symbolicNames = [
        null, "TABLE", "STATS", "WHERE", "SORT", "EVAL", "REGEX", "TIMECHART", 
        "UNPACK", "AS", "BY", "SPAN", "TIMECOL", "MAXGROUPS", "FIELD", "ASC", 
        "DESC", "IN", "TRUE", "FALSE", "IF", "CASE", "ELSE", "SEARCH_AND", 
        "SEARCH_OR", "PIPE", "COMMA", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
        "EQUAL", "EQUAL_EQUAL", "NOT_EQUAL", "GREATER_EQUAL", "LESS_EQUAL", 
        "GREATER_THAN", "LESS_THAN", "AND", "OR", "NOT", "PLUS", "MINUS", 
        "MULTIPLY", "DIVIDE", "SEARCH_PARAM_NEQ", "AT_DATASOURCE", "DQUOT_STRING", 
        "SQUOT_STRING", "REGEX_PATTERN", "INTEGER", "IDENTIFIER", "WS", 
        "COMMENT"
    ];
    public static readonly ruleNames = [
        "query", "datasource", "controllerParam", "search", "searchTail", 
        "searchTerm", "searchFactor", "searchLiteral", "pipelineCommand", 
        "tableCmd", "tableColumn", "statsCmd", "aggregationFunction", "groupby", 
        "whereCmd", "sortCmd", "sortColumn", "evalCmd", "evalExpression", 
        "regexCmd", "timechartCmd", "timechartParams", "unpackCmd", "logicalExpression", 
        "logicalTail", "unitExpression", "notExpression", "inArrayExpression", 
        "comparisonExpression", "functionExpression", "functionArgs", "functionArg", 
        "evalFunctionArg", "evalFunction", "caseThen", "calcExpression", 
        "calcAction", "calcTerm", "calcTermAction", "calculateUnit", "factor", 
        "literalBoolean", "literalString", "regexLiteral", "identifierOrString",
    ];

    public get grammarFileName(): string { return "QQL.g4"; }
    public get literalNames(): (string | null)[] { return QQLParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return QQLParser.symbolicNames; }
    public get ruleNames(): string[] { return QQLParser.ruleNames; }
    public get serializedATN(): number[] { return QQLParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, QQLParser._ATN, QQLParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public query(): QueryContext {
        let localContext = new QueryContext(this.context, this.state);
        this.enterRule(localContext, 0, QQLParser.RULE_query);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 93;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 46) {
                {
                {
                this.state = 90;
                this.datasource();
                }
                }
                this.state = 95;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 99;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 1, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 96;
                    this.controllerParam();
                    }
                    }
                }
                this.state = 101;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 1, this.context);
            }
            this.state = 103;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (((((_la - 27)) & ~0x1F) === 0 && ((1 << (_la - 27)) & 28311553) !== 0)) {
                {
                this.state = 102;
                this.search();
                }
            }

            this.state = 108;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 25) {
                {
                {
                this.state = 105;
                this.pipelineCommand();
                }
                }
                this.state = 110;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 111;
            this.match(QQLParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public datasource(): DatasourceContext {
        let localContext = new DatasourceContext(this.context, this.state);
        this.enterRule(localContext, 2, QQLParser.RULE_datasource);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 113;
            this.match(QQLParser.AT_DATASOURCE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public controllerParam(): ControllerParamContext {
        let localContext = new ControllerParamContext(this.context, this.state);
        this.enterRule(localContext, 4, QQLParser.RULE_controllerParam);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 115;
            this.match(QQLParser.IDENTIFIER);
            this.state = 116;
            _la = this.tokenStream.LA(1);
            if(!(_la === 31 || _la === 33)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 119;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case QQLParser.DQUOT_STRING:
            case QQLParser.SQUOT_STRING:
                {
                this.state = 117;
                this.literalString();
                }
                break;
            case QQLParser.REGEX_PATTERN:
                {
                this.state = 118;
                this.regexLiteral();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public search(): SearchContext {
        let localContext = new SearchContext(this.context, this.state);
        this.enterRule(localContext, 6, QQLParser.RULE_search);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 121;
            this.searchTerm();
            this.state = 123;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 23 || _la === 24) {
                {
                this.state = 122;
                this.searchTail();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public searchTail(): SearchTailContext {
        let localContext = new SearchTailContext(this.context, this.state);
        this.enterRule(localContext, 8, QQLParser.RULE_searchTail);
        try {
            this.state = 129;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case QQLParser.SEARCH_AND:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 125;
                this.match(QQLParser.SEARCH_AND);
                this.state = 126;
                this.search();
                }
                break;
            case QQLParser.SEARCH_OR:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 127;
                this.match(QQLParser.SEARCH_OR);
                this.state = 128;
                this.search();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public searchTerm(): SearchTermContext {
        let localContext = new SearchTermContext(this.context, this.state);
        this.enterRule(localContext, 10, QQLParser.RULE_searchTerm);
        try {
            this.state = 136;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case QQLParser.LPAREN:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 131;
                this.match(QQLParser.LPAREN);
                this.state = 132;
                this.search();
                this.state = 133;
                this.match(QQLParser.RPAREN);
                }
                break;
            case QQLParser.DQUOT_STRING:
            case QQLParser.SQUOT_STRING:
            case QQLParser.INTEGER:
            case QQLParser.IDENTIFIER:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 135;
                this.searchFactor();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public searchFactor(): SearchFactorContext {
        let localContext = new SearchFactorContext(this.context, this.state);
        this.enterRule(localContext, 12, QQLParser.RULE_searchFactor);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 138;
            this.searchLiteral();
            this.state = 141;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 33) {
                {
                this.state = 139;
                this.match(QQLParser.NOT_EQUAL);
                this.state = 140;
                this.searchLiteral();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public searchLiteral(): SearchLiteralContext {
        let localContext = new SearchLiteralContext(this.context, this.state);
        this.enterRule(localContext, 14, QQLParser.RULE_searchLiteral);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 146;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                this.state = 146;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case QQLParser.IDENTIFIER:
                    {
                    this.state = 143;
                    this.match(QQLParser.IDENTIFIER);
                    }
                    break;
                case QQLParser.INTEGER:
                    {
                    this.state = 144;
                    this.match(QQLParser.INTEGER);
                    }
                    break;
                case QQLParser.DQUOT_STRING:
                case QQLParser.SQUOT_STRING:
                    {
                    this.state = 145;
                    this.literalString();
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                }
                this.state = 148;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (((((_la - 47)) & ~0x1F) === 0 && ((1 << (_la - 47)) & 27) !== 0));
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public pipelineCommand(): PipelineCommandContext {
        let localContext = new PipelineCommandContext(this.context, this.state);
        this.enterRule(localContext, 16, QQLParser.RULE_pipelineCommand);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 150;
            this.match(QQLParser.PIPE);
            this.state = 159;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case QQLParser.TABLE:
                {
                this.state = 151;
                this.tableCmd();
                }
                break;
            case QQLParser.STATS:
                {
                this.state = 152;
                this.statsCmd();
                }
                break;
            case QQLParser.WHERE:
                {
                this.state = 153;
                this.whereCmd();
                }
                break;
            case QQLParser.SORT:
                {
                this.state = 154;
                this.sortCmd();
                }
                break;
            case QQLParser.EVAL:
                {
                this.state = 155;
                this.evalCmd();
                }
                break;
            case QQLParser.REGEX:
                {
                this.state = 156;
                this.regexCmd();
                }
                break;
            case QQLParser.TIMECHART:
                {
                this.state = 157;
                this.timechartCmd();
                }
                break;
            case QQLParser.UNPACK:
                {
                this.state = 158;
                this.unpackCmd();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public tableCmd(): TableCmdContext {
        let localContext = new TableCmdContext(this.context, this.state);
        this.enterRule(localContext, 18, QQLParser.RULE_tableCmd);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 161;
            this.match(QQLParser.TABLE);
            this.state = 162;
            this.tableColumn();
            this.state = 169;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (((((_la - 26)) & ~0x1F) === 0 && ((1 << (_la - 26)) & 39845889) !== 0)) {
                {
                {
                this.state = 164;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 26) {
                    {
                    this.state = 163;
                    this.match(QQLParser.COMMA);
                    }
                }

                this.state = 166;
                this.tableColumn();
                }
                }
                this.state = 171;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public tableColumn(): TableColumnContext {
        let localContext = new TableColumnContext(this.context, this.state);
        this.enterRule(localContext, 20, QQLParser.RULE_tableColumn);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 172;
            this.identifierOrString();
            this.state = 175;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 9) {
                {
                this.state = 173;
                this.match(QQLParser.AS);
                this.state = 174;
                this.identifierOrString();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statsCmd(): StatsCmdContext {
        let localContext = new StatsCmdContext(this.context, this.state);
        this.enterRule(localContext, 22, QQLParser.RULE_statsCmd);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 177;
            this.match(QQLParser.STATS);
            this.state = 178;
            this.aggregationFunction();
            this.state = 185;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (((((_la - 26)) & ~0x1F) === 0 && ((1 << (_la - 26)) & 39845889) !== 0)) {
                {
                {
                this.state = 180;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 26) {
                    {
                    this.state = 179;
                    this.match(QQLParser.COMMA);
                    }
                }

                this.state = 182;
                this.aggregationFunction();
                }
                }
                this.state = 187;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 190;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 10) {
                {
                this.state = 188;
                this.match(QQLParser.BY);
                this.state = 189;
                this.groupby();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public aggregationFunction(): AggregationFunctionContext {
        let localContext = new AggregationFunctionContext(this.context, this.state);
        this.enterRule(localContext, 24, QQLParser.RULE_aggregationFunction);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 192;
            this.identifierOrString();
            this.state = 198;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 27) {
                {
                this.state = 193;
                this.match(QQLParser.LPAREN);
                this.state = 195;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (((((_la - 47)) & ~0x1F) === 0 && ((1 << (_la - 47)) & 19) !== 0)) {
                    {
                    this.state = 194;
                    this.identifierOrString();
                    }
                }

                this.state = 197;
                this.match(QQLParser.RPAREN);
                }
            }

            this.state = 202;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 9) {
                {
                this.state = 200;
                this.match(QQLParser.AS);
                this.state = 201;
                this.identifierOrString();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public groupby(): GroupbyContext {
        let localContext = new GroupbyContext(this.context, this.state);
        this.enterRule(localContext, 26, QQLParser.RULE_groupby);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 204;
            this.identifierOrString();
            this.state = 211;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (((((_la - 26)) & ~0x1F) === 0 && ((1 << (_la - 26)) & 39845889) !== 0)) {
                {
                {
                this.state = 206;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 26) {
                    {
                    this.state = 205;
                    this.match(QQLParser.COMMA);
                    }
                }

                this.state = 208;
                this.identifierOrString();
                }
                }
                this.state = 213;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public whereCmd(): WhereCmdContext {
        let localContext = new WhereCmdContext(this.context, this.state);
        this.enterRule(localContext, 28, QQLParser.RULE_whereCmd);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 214;
            this.match(QQLParser.WHERE);
            this.state = 215;
            this.logicalExpression();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public sortCmd(): SortCmdContext {
        let localContext = new SortCmdContext(this.context, this.state);
        this.enterRule(localContext, 30, QQLParser.RULE_sortCmd);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 217;
            this.match(QQLParser.SORT);
            this.state = 218;
            this.sortColumn();
            this.state = 225;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (((((_la - 26)) & ~0x1F) === 0 && ((1 << (_la - 26)) & 39845889) !== 0)) {
                {
                {
                this.state = 220;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 26) {
                    {
                    this.state = 219;
                    this.match(QQLParser.COMMA);
                    }
                }

                this.state = 222;
                this.sortColumn();
                }
                }
                this.state = 227;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public sortColumn(): SortColumnContext {
        let localContext = new SortColumnContext(this.context, this.state);
        this.enterRule(localContext, 32, QQLParser.RULE_sortColumn);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 228;
            this.identifierOrString();
            this.state = 230;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 15 || _la === 16) {
                {
                this.state = 229;
                _la = this.tokenStream.LA(1);
                if(!(_la === 15 || _la === 16)) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
            }
